--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 	
 	function initFlyouts(){
 		initPublishedFlyoutMenus(
-			[{"id":"329200829999078063","title":"Home","url":"index.htmll","target":"","nav_menu":false,"nonclickable":false},{"id":"185841933311218061","title":"About","url":"about.html","target":"","nav_menu":false,"nonclickable":false},{"id":"863772586344279607","title":"Contact","url":"contact.html","target":"","nav_menu":false,"nonclickable":false},{"id":"637396731342731656","title":"New Page","url":"new-page.html","target":"","nav_menu":false,"nonclickable":false}],
+			[{"id":"329200829999078063","title":"Home","url":"index.htmll","target":"","nav_menu":false,"nonclickable":false},{"id":"185841933311218061","title":"About","url":"about.html","target":"","nav_menu":false,"nonclickable":false},{"id":"863772586344279607","title":"Contact","url":"contact.html","target":"","nav_menu":false,"nonclickable":false},{"id":"637396731342731656","title":"Privacy Policy","url":"privacy-policy.html","target":"","nav_menu":false,"nonclickable":false}],
 			"185841933311218061",
 			'',
 			'active',
@@ -159,8 +159,8 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			
 		</li>
 		<li id="pg637396731342731656" class="wsite-menu-item-wrap">
-			<a href="new-page.html" class="wsite-menu-item">
-				New Page
+			<a href="privacy-policy.html" class="wsite-menu-item">
+				Privacy Policy
 			</a>
 			
 		</li>
@@ -247,8 +247,8 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
     			
     		</li>
     		<li id="pg637396731342731656" class="wsite-menu-item-wrap">
-    			<a href="new-page.html" class="wsite-menu-item">
-    				New Page
+    			<a href="privacy-policy.html" class="wsite-menu-item">
+    				Privacy Policy
     			</a>
     			
     		</li>
