--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,13 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Home</title><meta property="og:site_name" content="">
-<meta property="og:title" content="">
-<meta property="og:description" content="​A spice rack is just a way to keep your spices neat. It helps you see what you have, get to them easily, keep them fresh, and free up space in your kitchen.">
-<meta property="og:image" content="https://cabletesters.weebly.com/uploads/1/5/1/9/151901982/pexels-lucasandrade-29172133.jpg">
-<meta property="og:image" content="https://cabletesters.weebly.com/uploads/1/5/1/9/151901982/pexels-keeganjchecks-30370491.jpg">
-<meta property="og:image" content="https://cabletesters.weebly.com/uploads/1/5/1/9/151901982/pexels-the-ghazi-2152398165-32269126_orig.jpg">
-<meta property="og:url" content="https://cabletesters.weebly.com/">
+		<title>Privacy Policy</title><meta property="og:site_name" content="">
+<meta property="og:title" content="Privacy Policy">
+<meta property="og:description" content="**1. What We Grab** To keep things safe and fun for everyone, we grab some info: a. Account Stuff *   Your username, email, and a secret password (all scrambled up for safety). *   Some extra...">
+<meta property="og:image" content="https://cdn2.editmysite.com/images/site/footer/og-image-placeholder-blank.png">
+<meta property="og:url" content="https://cabletesters.weebly.com/privacy-policy.html">
 
 
 
@@ -100,7 +98,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 		}
 		</script>
 		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='cabletesters.weebly.com'; </script><script>_W = _W || {};
-			_W.customerLocale = "en_US";
+			_W.customerLocale = "en_IN";
 			_W.storeName = null;
 			_W.isCheckoutReskin = false;
 			_W.storeCountry = "IN";
@@ -114,7 +112,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 	function initFlyouts(){
 		initPublishedFlyoutMenus(
 			[{"id":"329200829999078063","title":"Home","url":"index.htmll","target":"","nav_menu":false,"nonclickable":false},{"id":"185841933311218061","title":"About","url":"about.html","target":"","nav_menu":false,"nonclickable":false},{"id":"863772586344279607","title":"Contact","url":"contact.html","target":"","nav_menu":false,"nonclickable":false},{"id":"637396731342731656","title":"Privacy Policy","url":"privacy-policy.html","target":"","nav_menu":false,"nonclickable":false}],
-			"329200829999078063",
+			"637396731342731656",
 			'',
 			'active',
 			false,
@@ -127,7 +125,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 		
 		
 	</head>
-	<body class="header-page  wsite-page-index  sticky-nav-on full-width-on header-scroll-animate-off  wsite-theme-light"><div class="wrapper">
+	<body class="header-page  wsite-page-new-page  sticky-nav-on full-width-on header-scroll-animate-off  wsite-theme-light"><div class="wrapper">
     <div class="unite-header">
       <div class="nav-wrap">
         <div class="container">
@@ -142,7 +140,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 </span></div>
           <div class="nav desktop-nav"><ul class="wsite-menu-default">
-		<li id="active" class="wsite-menu-item-wrap">
+		<li id="pg329200829999078063" class="wsite-menu-item-wrap">
 			<a href="index.html" class="wsite-menu-item">
 				Home
 			</a>
@@ -160,7 +158,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			</a>
 			
 		</li>
-		<li id="pg637396731342731656" class="wsite-menu-item-wrap">
+		<li id="active" class="wsite-menu-item-wrap">
 			<a href="privacy-policy.html" class="wsite-menu-item">
 				Privacy Policy
 			</a>
@@ -176,13 +174,13 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
     <div class="banner-wrap">
       <div class="wsite-elements wsite-not-footer wsite-header-elements">
 	<div class="wsite-section-wrap">
-	<div class="wsite-section wsite-header-section wsite-section-bg-color" style="height: 500px;vertical-align: bottom;background-color: #1e2330;background-image: none;is_customized: 1;">
+	<div class="wsite-section wsite-header-section wsite-section-bg-color" style="background-color: #1e2330;background-image: none;is_customized: 1;">
 		<div class="wsite-section-content">
 			
           <div class="container">
             <div class="banner">
 				<div class="wsite-section-elements">
-					<h2 class="wsite-content-title">Spice Rack</h2>
+					<h2 class="wsite-content-title">&#8203;Privacy Policy  <br></h2>
 				</div>
 			</div>
           </div>
@@ -199,27 +197,11 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
     <div class="main-wrap">
       <div id="wsite-content" class="wsite-elements wsite-not-footer">
 	<div class="wsite-section-wrap">
-	<div class="wsite-section wsite-body-section wsite-background-2">
+	<div class="wsite-section wsite-body-section wsite-background-9">
 		<div class="wsite-section-content">
           <div class="container">
 			<div class="wsite-section-elements">
-				<div><div style="height: 20px; overflow: hidden;"></div>
-				<div id='827309470570929637-gallery' class='imageGallery' style='line-height: 0px; padding: 0; margin: 0'>
-<div id='827309470570929637-imageContainer0' style='float:left;width:49.95%;margin:0;'><div id='827309470570929637-insideImageContainer0' style='position:relative;margin:5px;'><div class='galleryImageHolder' style='position:relative; width:100%; padding:0 0 75%;overflow:hidden;'><div class='galleryInnerImageHolder'><a href='uploads/1/5/1/9/151901982/pexels-lucasandrade-29172133_orig.jpg' rel='lightbox[gallery827309470570929637]'><img src='uploads/1/5/1/9/151901982/pexels-lucasandrade-29172133.jpg' class='galleryImage' _width='800' _height='533' style='position:absolute;border:0;width:112.57%;top:0%;left:-6.29%'></a></div></div></div></div><div id='827309470570929637-imageContainer1' style='float:left;width:49.95%;margin:0;'><div id='827309470570929637-insideImageContainer1' style='position:relative;margin:5px;'><div class='galleryImageHolder' style='position:relative; width:100%; padding:0 0 75%;overflow:hidden;'><div class='galleryInnerImageHolder'><a href='uploads/1/5/1/9/151901982/pexels-keeganjchecks-30370491_orig.jpg' rel='lightbox[gallery827309470570929637]'><img src='uploads/1/5/1/9/151901982/pexels-keeganjchecks-30370491.jpg' class='galleryImage' _width='800' _height='533' style='position:absolute;border:0;width:112.57%;top:0%;left:-6.29%'></a></div></div></div></div><span style='display: block; clear: both; height: 0px; overflow: hidden;'></span>
-</div>
-
-				<div style="height: 20px; overflow: hidden;"></div></div>
-
-<div class="paragraph">&#8203;A spice rack is just a way to keep your spices neat. It helps you see what you have, get to them easily, keep them fresh, and free up space in your kitchen.<br></div>
-
-<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
-<a>
-<img src="uploads/1/5/1/9/151901982/pexels-the-ghazi-2152398165-32269126_orig.jpg" alt="Picture" style="width:auto;max-width:100%">
-</a>
-<div style="display:block;font-size:90%"></div>
-</div></div>
-
-<div class="paragraph">&#8203;&#129474; What a Spice Rack Does<br><br>*&nbsp; &nbsp;Keeps your spices in one spot.<br>*&nbsp; &nbsp;Makes cooking faster since you can find what you need right away.<br>*&nbsp; &nbsp;Some racks keep spices safe from heat, light, and air to help them last longer.<br>*&nbsp; &nbsp;Makes your kitchen look nice and neat.<br><br>&#129523; Different Spice Racks<br><br>1.&nbsp; Wall-Mounted<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Goes on walls or doors.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Saves room on counters and in cabinets.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Great if you have a small kitchen.<br>2.&nbsp; Countertop<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Stands on the counter.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Often spins around.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Easy to reach while you're cooking.<br>3.&nbsp; Drawer Inserts<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Fits right in your drawers.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Keeps spices hidden but easy to get to.<br>4.&nbsp; Pull-Out<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Built into cabinets.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Slides out like a drawer.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Works well in deep, skinny spaces.<br>5.&nbsp; Magnetic<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Sticks to walls, fridges, or anything metal.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Spice containers have magnets on the bottom.<br>6.&nbsp; Hanging<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Hangs under shelves or cabinets.<br>&nbsp; &nbsp; *&nbsp; &nbsp;Good for using empty space.<br>7.&nbsp; Stackable<br><br>&nbsp; &nbsp; *&nbsp; &nbsp;Lets you stack spice containers.<br>&nbsp; &nbsp; *&nbsp; &nbsp;You can add more as you get more spices.<br><br>&#129521; What They're Made Of<br><br>| Material | Pros&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Cons&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;|<br>| :------- | :------------------------------------------------------- | :--------------------------------------------------------- |<br>| Wood&nbsp; &nbsp; &nbsp;| Looks good, lasts a while&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | Can smell, needs to be taken care of&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br>| Metal&nbsp; &nbsp; | Looks modern, lasts a while&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Can rust if it's not coated well&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br>| Plastic&nbsp; | Light, cheap&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | Doesn't last as long, can stain&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;|<br>| Glass&nbsp; &nbsp; | Looks fancy, you can see what's inside&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | Breaks easily&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br>| Acrylic&nbsp; | Clear, modern, lasts a while&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Scratches easily&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;|<br>| Bamboo&nbsp; &nbsp;| Good for the planet, looks natural&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Doesn't always stand up to water&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;|<br><br>&#128207; Size<br><br>*&nbsp; &nbsp;Holds about 4 to 100+ jars.<br>*&nbsp; &nbsp;Get one that fits the number of spices you use a lot.<br>*&nbsp; &nbsp;Measure your space before you buy.<br><br>&#129504; Things to Think About<br><br>*&nbsp; &nbsp;Kitchen Space: Pick a rack that fits where you need it.<br>*&nbsp; &nbsp;See-Through: Clear containers or labels help a bunch.<br>*&nbsp; &nbsp;Easy to Reach: Make sure your go-to spices are easy to grab.<br>*&nbsp; &nbsp;Jar Size: Check if the rack fits your jars.<br>*&nbsp; &nbsp;Keep it Sealed: This helps keep spices fresh.<br>*&nbsp; &nbsp;Moveable Shelves: Helps if you have different-sized jars.<br>*&nbsp; &nbsp;Easy to Clean: Make sure it's easy to wipe down and refill.<br>*&nbsp; &nbsp;How to Set it Up: Some need tools, others just stand.<br><br>&#129533; How to Keep it Clean<br><br>*&nbsp; &nbsp;Clean it Often: Dust and spills can build up.<br>*&nbsp; &nbsp;No Sun: Light can mess with your spices.<br>*&nbsp; &nbsp;Check Dates: Use older spices first.<br>*&nbsp; &nbsp;Label: Helps if jars look the same.<br><br>&#129514; Cool DIY Ideas<br><br>*&nbsp; &nbsp;Use old trays or boxes.<br>*&nbsp; &nbsp;Put spices in jars with labels.<br>*&nbsp; &nbsp;Use magnetic jars on a metal board.<br>*&nbsp; &nbsp;Hang jars on pegboards.<br>*&nbsp; &nbsp;Use tension rods in drawers.<br><br>&#128257; Common Rack Things<br><br>*&nbsp; &nbsp;Spins around.<br>*&nbsp; &nbsp;Shelves you can move.<br>*&nbsp; &nbsp;Labels.<br>*&nbsp; &nbsp;Trays that slide out.<br>*&nbsp; &nbsp;Thing to help pour spices in.<br>*&nbsp; &nbsp;Containers that seal.<br><br>&#128274; Good Spice Storage (Rack or No Rack)<br><br>| Do This&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Don't Do This&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br>| :-------------------------------- | :------------------------------- |<br>| Use sealed containers&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Leave open to air or water&nbsp; &nbsp; &nbsp; &nbsp;|<br>| Keep in a cool, dark spot&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Put near heat or sun&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; |<br>| Use dark jars if there's light | Use clear jars in the sun&nbsp; &nbsp; &nbsp; &nbsp;|<br>| Label with date&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| Guess when you bought it |<br><br>&#127807; Other Things to Use<br><br>*&nbsp; &nbsp;Spice drawers<br>*&nbsp; &nbsp;Spinny things in pantries<br>*&nbsp; &nbsp;Hanging baskets<br>*&nbsp; &nbsp;Shelves in cabinets<br>*&nbsp; &nbsp;Things that hang on pantry doors<br><br>&#128230; Hacks<br><br>*&nbsp; &nbsp;Put spices in ABC order.<br>*&nbsp; &nbsp;Group by type of food (like Italian).<br>*&nbsp; &nbsp;Use different colored labels.<br>*&nbsp; &nbsp;Put racks inside cabinet doors.<br>*&nbsp; &nbsp;Use test tubes for a fun look.<br></div>
+				<div class="paragraph"><br>**1. What We Grab**<br><br>To keep things safe and fun for everyone, we grab some info:<br><br>a. Account Stuff<br><br>*&nbsp; &nbsp;Your username, email, and a secret password (all scrambled up for safety).<br>*&nbsp; &nbsp;Some extra stuff you might want to share, like a short bio or a profile picture.<br><br>b. What You Do<br><br>*&nbsp; &nbsp;Your posts, replies, messages, comments, and likes.<br>*&nbsp; &nbsp;Any reports you make or any actions we take to keep things in order.<br><br>c. Techy Bits<br><br>*&nbsp; &nbsp;Your IP address and what kind of device you're using.<br>*&nbsp; &nbsp;Logs of what you do on the site, like when you log in or what pages you look at.<br><br>**2. How We Use It**<br><br>We use this info to:<br><br>*&nbsp; &nbsp;Keep your account running and show off your public profile.<br>*&nbsp; &nbsp;Help people chat and get involved.<br>*&nbsp; &nbsp;Keep the peace and make sure everyone's safe.<br>*&nbsp; &nbsp;Figure out how to make the whole thing better.<br>*&nbsp; &nbsp;Send you important news or updates.<br><br>We definitely don't use your info to sell you stuff or give it to other companies to do the same.<br><br>**3. What Everyone Can See**<br><br>Depending on your settings and how the community is set up, other people might see your username, posts, replies, and public profile. So, try not to post anything too private out in the open.<br><br>**4. Who We Share With**<br><br>We don't sell your info. But we might share it with:<br><br>*&nbsp; &nbsp;Services that help us run the site, like hosting, spam blockers, and email tools.<br>*&nbsp; &nbsp;People who keep the place in order.<br>*&nbsp; &nbsp;The authorities, if we have to by law or to enforce our rules.<br><br>Everyone we share with has to play by the rules when it comes to privacy and data protection.<br><br>**5. Cookies**<br><br>We use cookies to:<br><br>*&nbsp; &nbsp;Keep you logged in.<br>*&nbsp; &nbsp;Remember what you like.<br>*&nbsp; &nbsp;Make the site run better and be easier to use.<br>*&nbsp; &nbsp;Track general activity on the site (without knowing who's who).<br><br>You can control cookies in your browser settings.<br><br>**6. Your Say**<br><br>You can:<br><br>*&nbsp; &nbsp;See, change, or delete your profile.<br>*&nbsp; &nbsp;Ask for a copy of all your info.<br>*&nbsp; &nbsp;Ask us to delete your account and everything you've posted (but we have to follow our own rules about that).<br><br>**7. Kids**<br><br>If you're under 13, you can't create an account. If we find out about underage users, we'll delete their accounts right away.<br><br>**8. Keeping Things Safe**<br><br>We use encryption, security measures, and safe hosting to protect your info. But always use a strong password and watch out for anything fishy.<br><br>**9. Changes**<br><br>We might update this policy as things change. If we make any big changes, we'll let you know.<br><br></div>
 			</div>
 		</div>
       </div>
@@ -263,7 +245,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
   <div class="nav mobile-nav">
     <a class="hamburger" aria-label="Menu" href="#"><span></span></a>
     <ul class="wsite-menu-default">
-    		<li id="active" class="wsite-menu-item-wrap">
+    		<li id="pg329200829999078063" class="wsite-menu-item-wrap">
     			<a href="index.html" class="wsite-menu-item">
     				Home
     			</a>
@@ -281,7 +263,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
     			</a>
     			
     		</li>
-    		<li id="pg637396731342731656" class="wsite-menu-item-wrap">
+    		<li id="active" class="wsite-menu-item-wrap">
     			<a href="privacy-policy.html" class="wsite-menu-item">
     				Privacy Policy
     			</a>
